k8s-files/ingress.yaml
# web-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - 192.168.1.50.nip.io
    secretName: ebos-web-app-tls
  rules:
  - host: 192.168.1.50.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app
            port:
              number: 80
  ingressClassName: nginx
